style.css
/* ... */
.yoga-text-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    font-size: 1.8rem;
}

.yoga-classes-container {
    width: 100vw;
}

.btm-yoga-img {
    height: 110vh;
    background-image: url('assets/website-images/childs-pose.png');
    position: relative;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    background-color: var(--main-colour);
}

/* 
****************************************************************
                Media Query To Remove Background Image
****************************************************************
*/

@media (max-width: 768px) {
    .yoga-text-container {
        font-size: 1.5rem;
    }
}

@media (max-width: 674px) {
    .btm-yoga-img {
        height: 300vh;
        background-image: none;
    }
}

.btm-yoga-img-blend {
    position: absolute;
    width: 100%;
    height: 100%;
    background-image: linear-gradient(to bottom, rgba(251, 248, 241, 1), rgba(251, 248, 241, 0));
}

.yoga-box-container {
    height: 100%;
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    gap: 1rem;
}

.card {
    text-align: center;
    height: 25rem;
    width: 20rem;
    display: flex;
    justify-content: center;
    align-items: center;
}

.card > img {
    padding-top: 3rem;
}

.card-text {
    font-size: 1.2rem;
}

.card a {
    background-color: var(--secondary-colour);
    color: var(--main-colour);
    border: solid 1px black;
}

/* 
****************************************************************
                Yoga - End - All Devices
****************************************************************
*/

/* 
****************************************************************
                Events - Start - All Devices
****************************************************************
*/

.events-container {
    height: 25vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

/* 
****************************************************************
                Events - End - All Devices
****************************************************************
*/

/* 
****************************************************************
                Contact Me - Start - All Devices
****************************************************************
*/

#contactMe {
    height: 70vh;
    display: flex;
    justify-content: center;
    align-items: center;
    padding-bottom: 3em;
}

.contact {
    font-size: 3.5rem;
}

.contact-me-container {
    text-align: center;
    height: 100vh;
    color: black;
    margin-bottom: 5rem;
}

.contact-me-text {
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
}

.bi-instagram > a {
    text-decoration: none;
}

@media (max-width: 768px) {
    .contact-me-text {
        font-size: 1.5rem;
    }
}

/* 
****************************************************************
                Contact Me - End - All Devices
****************************************************************
*/

/* 
****************************************************************
                Footer - All Devices
****************************************************************
*/

.footer {
    height: 15vh;
    background-color: var(--secondary-colour);
    color: var(--main-colour);
    display: flex;
}

.footer-logo-container {
    width: 20%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.footer-contacts {
    font-weight: 400;
    font-size: 0.9rem;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}

.footer-contacts a {
    color: var(--main-colour);
}

.website-copyright {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: flex-end;
    height: 100%;
    font-size: 0.5rem;
    font-weight: 400;
}

@media (max-width: 768px) {
    .fa-spa {
        font-size: 10rem;
    }

    .about-me {
        font-size: 2rem;
    }

    .massage {
        font-size: 2rem;
    }

    .yoga {
        font-size: 2rem;
    }

    .contact {
        font-size: 2rem;
    }
}

